--- a/pod.yaml
+++ b/pod.yaml
@@ -1,13 +1,23 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: test
+  name: debug
   namespace: default
   labels:
     env: study
 spec:
   containers:
-  - name: hello-world
-    image: hello-world:linux
-  - name: centos
+  - name: debug
     image: centos:7
+    command:
+    - "sh"
+    - "-c"
+    args:
+    - |
+      while true
+      do
+        sleep ${DELAY}
+      done
+    env:
+    - name: "DELAY"
+      value: "5"
